--- a/ProjectWebDevelopment/Views/Auctions/Index.cshtml
+++ b/ProjectWebDevelopment/Views/Auctions/Index.cshtml
@@ -1,65 +1,56 @@
-﻿@model IEnumerable<ProjectWebDevelopment.Data.Entities.Auction>
+﻿@model AuctionsListViewModel
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.StartDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EndDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MinimumBid)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Seller)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EndDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MinimumBid)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Seller.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+@section Head {
+    <link rel="stylesheet" href="~/css/auction-list.css" />
 }
-    </tbody>
-</table>
+
+<div class="d-flex justify-content-between align-items-center py-1">
+    <h1>Alle veilingen</h1>
+
+    <div>
+        <a asp-action="Create" class="btn btn-primary">Nieuwe veiling</a>
+    </div>
+</div>
+
+<hr />
+
+<ul class="auctions-list list-unstyled mt-3">
+    @foreach (var item in Model.Auctions)
+    {
+        <li class="auction-item row my-4">
+            <div class="col-5 col-md-4 d-flex flex-column justify-content-center">
+                <img src="@Html.DisplayFor(modelItem => item.ImagePath)" class="auction-image" />
+            </div>
+            <div class="col-7 col-md-8 d-flex flex-column justify-content-center">
+                <h2>@Html.DisplayFor(modelItem => item.Title)</h2>
+                @if (item.HighestBid == null)
+                {
+                    <p>Nog geen biedingen.</p>
+                }
+                else
+                {
+                    <p>Hoogste bod: &euro; @Html.DisplayFor(modelItem => item.HighestBid)</p>
+                }
+                <div class="auction-countdown-wrapper">
+                    <div class="bg-light d-inline-block py-2 px-5 rounded">
+                        <auction-countdown end-date="@Html.DisplayFor(modelItem => item.EndDate)"></auction-countdown>
+                    </div>
+                </div>
+
+                <div class="actions-wrapper mt-3">
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </div>
+            </div>
+        </li>
+    }
+</ul>
+
+@section Scripts {
+    <script src="~/js/elements/auction-countdown.js"></script>
+}
