--- a/ProjectWebDevelopment/Views/Auctions/Details.cshtml
+++ b/ProjectWebDevelopment/Views/Auctions/Details.cshtml
@@ -9,7 +9,7 @@
 }
 
 <section class="py-5">
-    <div class="row">
+    <div class="row gap-4">
         <div class="col-lg">
             <div id="auctionCarouselControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -35,20 +35,63 @@
         </div>
         <div class="col-lg">
             <div>
-                <a asp-action="Edit" asp-route-id="@Model?.Auction.Id">Edit</a> |
-                <a asp-action="Index">Back to List</a>
+                <a asp-action="Index">< Terug </a>
             </div>
 
             <h1>@Html.DisplayFor(model => Model.Auction.Title)</h1>
-            <small>Aangeboden door <strong>@Html.DisplayFor(modelItem => Model.Auction.Seller.UserName)</strong></small>
+            <small>Aangeboden door <strong>@Html.DisplayFor(modelItem => Model.Auction.Seller.FirstName)</strong></small>
 
-            <p class="my-3">@Html.DisplayFor(model => Model.Auction.Description)</p>
+            <p class="mt-3 mb-5">
+                @Html.DisplayFor(model => Model.Auction.Description)
+            </p>
 
-            <div class="auction-countdown-wrapper">
-                <h2>Veiling sluit over</h2>
+            <div class="auction-countdown-wrapper my-5">
+                <h2 class="h3">Veiling sluit over</h2>
                 <div class="bg-light d-inline-block py-2 px-5 rounded">
                     <auction-countdown end-date="@Html.DisplayFor(modelItem => Model.Auction.EndDate)"></auction-countdown>
                 </div>
+            </div>
+
+            <div class="current-biddings-wrapper my-5">
+                <h2 class="h3">Huidige biedingen</h2>
+            </div>
+
+            <div class="my-5">
+                @if (User.IsInRole("Seller"))
+                {
+                    <h2 class="h3">Veiling bewerken</h2>
+                    <div class="row">
+                        <div class="col">
+                            <a asp-action="Edit" asp-route-id="@Model?.Auction.Id" class="btn btn-primary btn-block w-100">Veiling bewerken</a>
+                        </div>
+                        <div class="col">
+                            <a asp-action="Delete" asp-route-id="@Model?.Auction.Id" class="btn btn-secondary btn-block w-100">Veiling annuleren</a>
+                        </div>
+                    </div>
+
+                } else if (User.IsInRole("Buyer")) 
+                {
+                    <h2 class="h3">Bod plaatsen</h2>
+                    <form>
+                        <div class="row">
+                            <div class="col">
+                                <div class="input-group">
+                                    <span class="input-group-text" id="bidAddon">&euro;</span>
+                                    <input type="number" class="form-control" aria-label="Bedrag" aria-describedby="bidAddon">
+                                </div>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-primary w-100">Plaats bod</button>
+                            </div>
+                        </div>
+                    </form>
+                    <small>Bied minimaal &euro; 0,00</small>
+                } else
+                {
+                    <h2 class="h3">Bod plaatsen</h2>
+                    <p>Om een bod te kunnen plaatsen, moet je eerst ingelogd zijn.</p>
+                    <a class="btn btn-primary" asp-area="Identity" asp-page="/Account/Login">Inloggen</a>
+                }
             </div>
         </div>
     </div>
