--- a/ProjectWebDevelopment/Views/Auctions/Index.cshtml
+++ b/ProjectWebDevelopment/Views/Auctions/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model AuctionsListViewModel
+﻿@using Microsoft.AspNetCore.Identity
+@model AuctionsListViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -12,9 +13,12 @@
     <div class="d-flex justify-content-between align-items-center">
         <h1>Alle veilingen</h1>
 
-        <div>
-            <a asp-action="Create" class="btn btn-primary">Nieuwe veiling</a>
-        </div>
+        @if (User.IsInRole("Seller")) 
+        {
+            <div>
+                <a asp-action="Create" class="btn btn-primary">Nieuwe veiling</a>
+            </div>
+        }
     </div>
 
     <hr />
@@ -23,32 +27,30 @@
     <ul class="auctions-list list-unstyled mt-3">
         @foreach (var item in Model.Auctions)
         {
-            <li class="auction-item row my-4">
-                <div class="col-5 col-md-4 d-flex flex-column justify-content-center">
-                    <img src="@Html.DisplayFor(modelItem => item.ImagePath)" class="auction-image" />
-                </div>
-                <div class="col-7 col-md-8 d-flex flex-column justify-content-center">
-                    <h2>@Html.DisplayFor(modelItem => item.Title)</h2>
-                    @if (item.HighestBid == null)
-                    {
-                        <p>Nog geen biedingen.</p>
-                    }
-                    else
-                    {
-                        <p>Hoogste bod: &euro; @Html.DisplayFor(modelItem => item.HighestBid)</p>
-                    }
-                    <div class="auction-countdown-wrapper">
-                        <div class="bg-light d-inline-block py-2 px-5 rounded">
-                            <auction-countdown end-date="@Html.DisplayFor(modelItem => item.EndDate)"></auction-countdown>
+            <li class="auction-item my-4">
+                <a asp-action="Details" asp-route-id="@item.Id" class="text-decoration-none text-reset">
+                    <div class="row">
+                        <div class="col-5 col-md-4 d-flex flex-column justify-content-center">
+                            <img src="@Html.DisplayFor(modelItem => item.ImagePath)" class="auction-image" />
+                        </div>
+                        <div class="col-7 col-md-8 d-flex flex-column justify-content-center">
+                            <h2>@Html.DisplayFor(modelItem => item.Title)</h2>
+                            @if (item.HighestBid == null)
+                            {
+                                <p>Nog geen biedingen.</p>
+                            }
+                            else
+                            {
+                                <p>Hoogste bod: &euro; @Html.DisplayFor(modelItem => item.HighestBid)</p>
+                            }
+                            <div class="auction-countdown-wrapper">
+                                <div class="bg-light d-inline-block py-2 px-5 rounded">
+                                    <auction-countdown end-date="@Html.DisplayFor(modelItem => item.EndDate)"></auction-countdown>
+                                </div>
+                            </div>
                         </div>
                     </div>
-
-                    <div class="actions-wrapper mt-3">
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                    </div>
-                </div>
+                </a>
             </li>
         }
     </ul>
