--- a/ProjectWebDevelopment/Views/Auctions/Details.cshtml
+++ b/ProjectWebDevelopment/Views/Auctions/Details.cshtml
@@ -99,4 +99,41 @@
 
 @section Scripts {
     <script src="~/js/elements/auction-countdown.js"></script>
+    <script src="~/js/signalr/dist/browser/signalr.js"></script>
+
+    <script>
+        var connection = new signalR.HubConnectionBuilder()
+            .withUrl("/auctionhub")
+            .build();
+
+        connection.on("ReceiveBidUpdate", function (message) {
+            // Handle bid update, e.g., display a notification
+            console.log(message);
+        });
+
+        connection.start()
+            .then(function () {
+                console.log("SignalR connected.");
+                joinAuctionGroup(@Model?.Auction.Id);
+            })
+            .catch(function (err) {
+                console.error(err.toString());
+            });
+
+        // Join auction group when necessary, e.g., when entering auction details page
+        function joinAuctionGroup(auctionId) {
+            connection.invoke("JoinAuctionGroup", auctionId)
+                .catch(function (err) {
+                    console.error(err.toString());
+                });
+        }
+
+        // Leave auction group when necessary, e.g., when leaving auction details page
+        function leaveAuctionGroup(auctionId) {
+            connection.invoke("LeaveAuctionGroup", auctionId)
+                .catch(function (err) {
+                    console.error(err.toString());
+                });
+        }
+    </script>
 }
