--- a/ProjectWebDevelopment/Views/Auctions/Index.cshtml
+++ b/ProjectWebDevelopment/Views/Auctions/Index.cshtml
@@ -57,5 +57,5 @@
 </section>
 
 @section Scripts {
-    <script src="~/js/elements/auction-countdown.js"></script>
+    <script src="~/js/auction-index.js" type="module"></script>
 }
