--- a/ProjectWebDevelopment/Views/Auctions/Create.cshtml
+++ b/ProjectWebDevelopment/Views/Auctions/Create.cshtml
@@ -66,5 +66,5 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    <script src="~/js/create-auction.js"></script>
+    <script src="~/js/create-auction.js" type="module"></script>
 }
