--- a/ProjectWebDevelopment/wwwroot/css/auction-details.css
+++ b/ProjectWebDevelopment/wwwroot/css/auction-details.css
@@ -16,3 +16,12 @@
     aspect-ratio:4/3;
     object-fit:cover;
 }
+
+#auctionBids li:first-child auction-bid .auction-bid .name::after {
+    content: 'Hoogste bieder';
+    display: inline-block;
+    margin-left:0.5em;
+    padding: 0.2em 1.5em;
+    border-radius: 1px;
+    background: var(--bs-light);
+}
