--- a/ProjectWebDevelopment/Views/Auctions/Details.cshtml
+++ b/ProjectWebDevelopment/Views/Auctions/Details.cshtml
@@ -12,7 +12,7 @@
 <section class="py-5">
     <div class="row gap-4">
         <div class="col-lg">
-            <div id="auctionCarouselControls" class="carousel slide" data-bs-ride="carousel">
+            <div id="auctionCarouselControls" class="carousel slide" data-bs-ride="carousel" data-cy="auction-images">
                 <div class="carousel-inner">
                     @if (Model.Auction.Images != null)
                     {
@@ -45,20 +45,20 @@
             <h1 data-cy="page-title">@Html.DisplayFor(model => Model.Auction.Title)</h1>
             <small>Aangeboden door <strong>@Html.DisplayFor(modelItem => Model.Auction.Seller.FirstName)</strong></small>
 
-            <p class="mt-3 mb-5">
+            <p class="mt-3 mb-5" data-cy="auction-description">
                 @Html.DisplayFor(model => Model.Auction.Description)
             </p>
 
             <div class="auction-countdown-wrapper my-5">
                 <h2 class="h3">Veiling sluit over</h2>
                 <div class="bg-light d-inline-block py-2 px-5 rounded">
-                    <auction-countdown end-date="@Html.DisplayFor(modelItem => Model.Auction.EndDate)"></auction-countdown>
+                    <auction-countdown end-date="@Html.DisplayFor(modelItem => Model.Auction.EndDate)" data-cy="auction-countdown"></auction-countdown>
                 </div>
             </div>
 
             <div class="current-biddings-wrapper my-5">
                 <h2 class="h3">Huidige biedingen</h2>
-                <ol class="list-unstyled" id="auctionBids">
+                <ol class="list-unstyled" id="auctionBids" data-cy="list-of-bids">
                     @if(Model.Auction.Bids != null)
                     {
                         @foreach (var bid in Model.Auction.Bids)
