Added honeypot captcha on bid form

--- a/ProjectWebDevelopment/Views/Auctions/Details.cshtml
+++ b/ProjectWebDevelopment/Views/Auctions/Details.cshtml
@@ -105,6 +105,11 @@
                                                aria-label="Bedrag"
                                                aria-describedby="bidAddon">
                                     </div>
+
+                                    <div style="display:none;">
+                                        <label for="name">Laat dit veld leeg:</label>
+                                        <input type="text" id="name" name="name" />
+                                    </div>
                                 </div>
                                 <div class="col">
                                     <button class="btn btn-primary w-100">Plaats bod</button>
